--- a/discussions/Topic 1 - Optimizing Risk and Return.ipynb
+++ b/discussions/Topic 1 - Optimizing Risk and Return.ipynb
@@ -228,12 +228,23 @@
     "Consider a regression of the portfolio (or security) return against a benchmark, in this case, SPY.\n",
     "\n",
     "$$\\rx_{i,t} = \\alpha + \\beta \\rx_{\\text{SPY},t} + \\epsilon_t$$\n",
-    "\n",
     "Note that we might be interested in a decomposition against several factors, $\\boldsymbol{x}_t$. \n",
+    "* SPY & SPX have different attribute: dividend\n",
     "\n",
     "$$\\rx_{i,t} = \\alpha + \\boldsymbol{\\beta}'\\boldsymbol{x}_t + \\epsilon_t$$\n",
     "\n",
     "We will have more to say about these decompositions.\n",
+    "* subtract: passive returns / active returns\n",
+    "* alpha: average of what can't be explained by $x$\n",
+    "* have a high $\\beta$: the target is taking a lot of explosure to ETFs, taking a lot of risk of banchmarks\n",
+    "* high $R^2$: the returns can be explained by $x$ very well\n",
+    "\n",
+    "Is regression a good choice?\n",
+    "\n",
+    "hedge or mimic?/replication\n",
+    "* hedge fund: holding a portfolio and hedge out other risk factors\n",
+    "* passive fund(ETF): no alpha.\n",
+    "\n",
     "\n",
     "### Alpha as a measure of performance\n",
     "\n",
@@ -286,10 +297,9 @@
     "The **Sharpe ratio** is the tradeoff of **mean excess return** against **volatility**.\n",
     "\n",
     "$$\\text{Sharpe Ratio} \\equiv \\frac{\\mux}{\\sigx}$$\n",
-    "\n",
     "In some cases this measure is used for total returns, not excess:\n",
     "\n",
-    "$$\\text{Sharpe Ratio} \\equiv \\frac{\\mu}{\\sigma}$$"
+    "$$\\text{Sharpe Ratio} \\equiv \\frac{\\mu}{\\sigma}$$\n"
    ]
   },
   {
@@ -302,8 +312,10 @@
     "The **Treynor ratio** is the tradeoff between **mean excess return** and **beta**.\n",
     "\n",
     "This is mostly used with equities, where the beta is with regard to a broad equity benchmark, like SPY.\n",
-    "\n",
-    "$$\\text{Treynor Ratio} \\equiv \\frac{\\mux}{\\beta}$$"
+    "$$\\text{Treynor Ratio} \\equiv \\frac{\\mux}{\\beta}$$\n",
+    "* measure risk by $\\beta$, the systematic risk\n",
+    "* explosure to the market\n",
+    "* they are not infected by leverage"
    ]
   },
   {
@@ -323,7 +335,10 @@
     "\n",
     "The Information Ratio is thus the Sharpe ratio of the unexplained portion of the decomposition, $\\alpha$ versus $\\epsilon$.\n",
     "\n",
-    "$$\\text{Information Ratio} \\equiv \\frac{\\alpha}{\\sigma_\\epsilon}$$"
+    "$$\\text{Information Ratio} \\equiv \\frac{\\alpha}{\\sigma_\\epsilon}$$\n",
+    "* the active portion of the return\n",
+    "* the sharpe ratio of the idiosyncratic portion of the return\n",
+    "* marginal sharpe ratio of the portfolio"
    ]
   },
   {
