--- a/discussions/Topic 2 - Measuring Risk.ipynb
+++ b/discussions/Topic 2 - Measuring Risk.ipynb
@@ -2624,7 +2624,7 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3.8.9 64-bit",
+   "display_name": "Python 3.8.5 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -2638,11 +2638,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.8.5"
   },
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "6553dfd50d31686df0e364d38a7d281a21dd8241aae825f978e35a44bd16b092"
    }
   }
  },
