--- a/discussions/Topic 3 - Value-at-Risk.ipynb
+++ b/discussions/Topic 3 - Value-at-Risk.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b711fd96",
    "metadata": {
     "heading_collapsed": true
    },
@@ -19,7 +18,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5c1749c0",
    "metadata": {
     "hidden": true
    },
@@ -50,7 +48,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1bc239e5",
    "metadata": {
     "hidden": true
    },
@@ -66,7 +63,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a39b7bb6",
    "metadata": {
     "hidden": true
    },
@@ -136,7 +132,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b5bf412",
    "metadata": {},
    "source": [
     "# Value at Risk (VaR)"
@@ -144,7 +139,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "247fddd9",
    "metadata": {},
    "source": [
     "## Definition\n",
@@ -171,7 +165,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f39f7f8",
    "metadata": {},
    "source": [
     "### Returns\n",
@@ -198,7 +191,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a48c7b26",
    "metadata": {},
    "source": [
     "## Distribution\n",
@@ -228,7 +220,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4a5f0c7",
    "metadata": {},
    "source": [
     "## Normal Distribution\n",
@@ -247,7 +238,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "648ff874",
    "metadata": {},
    "source": [
     "### Normal Formula\n",
@@ -266,7 +256,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c532d6c",
    "metadata": {},
    "source": [
     "## Lognormal\n",
@@ -294,7 +283,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abbfb814",
    "metadata": {},
    "source": [
     "### Punchline\n",
@@ -310,7 +298,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f2b9944",
    "metadata": {},
    "source": [
     "#### Technical Point\n",
@@ -322,7 +309,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecf22773",
    "metadata": {},
    "source": [
     "# Conditional Value-at-Risk (CVaR)"
@@ -330,7 +316,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df310554",
    "metadata": {},
    "source": [
     "## Definition\n",
@@ -344,7 +329,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e908b16",
    "metadata": {},
    "source": [
     "## Normal Distribution\n",
@@ -358,7 +342,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5643594c",
    "metadata": {},
    "source": [
     "### Technical Point\n",
@@ -375,7 +358,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "554a4e35",
    "metadata": {},
    "source": [
     "## Sufficient Statistics of a Normal\n",
@@ -402,7 +384,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4e7e467",
    "metadata": {},
    "source": [
     "# Coherence\n",
@@ -414,7 +395,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89119ad4",
    "metadata": {},
    "source": [
     "## Examples"
@@ -422,7 +402,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cf45c0c",
    "metadata": {},
    "source": [
     "### Payoffs\n",
@@ -440,7 +419,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86083636",
    "metadata": {},
    "source": [
     "### Example: Returns Not Subadditive\n",
@@ -464,7 +442,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc156501",
    "metadata": {},
    "source": [
     "### Issue\n",
@@ -480,7 +457,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6892fdf8",
    "metadata": {},
    "source": [
     "## Normal VaR\n",
@@ -490,7 +466,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "158cc8e6",
    "metadata": {},
    "source": [
     "## CVaR\n",
@@ -502,7 +477,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7d1c51c",
    "metadata": {},
    "source": [
     "# Conditional Moments"
@@ -510,7 +484,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9333539b",
    "metadata": {},
    "source": [
     "Whether using a normal model or something else, we want to allow $\\VaR$ to be dynamic across time. That is, we want the **conditional** $\\VaR$, utilizing info up to time $t$.\n",
@@ -522,7 +495,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3570d049",
    "metadata": {},
    "source": [
     "## The mean\n",
@@ -541,7 +513,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cc3cd05",
    "metadata": {},
    "source": [
     "## Notation for the volatility estimates"
@@ -549,7 +520,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea90cec5",
    "metadata": {},
    "source": [
     "Below, we use the notation that $\\sigma_t^2$ is estimated using data through $t-1$ as an estimate of what variance will be the next period ($t$)."
@@ -557,7 +527,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2e747a9",
    "metadata": {},
    "source": [
     "## Expanding\n",
@@ -567,7 +536,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d92dd7f",
    "metadata": {},
    "source": [
     "## Rolling\n",
@@ -577,7 +545,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3990d6c",
    "metadata": {},
    "source": [
     "## EWMA \n",
@@ -588,7 +555,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9e3b880",
    "metadata": {},
    "source": [
     "## IGARCH\n",
@@ -600,7 +566,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daa453fd",
    "metadata": {},
    "source": [
     "## GARCH\n",
@@ -614,7 +579,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "466725d3",
    "metadata": {},
    "source": [
     "# Evaluating VaR\n",
@@ -628,7 +592,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0567d1ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +619,6 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "4d53cea3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +637,6 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "9cb9706a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +650,6 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "74b7a70c",
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +693,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcb32b41",
    "metadata": {},
    "source": [
     "Why using normal distribution?\n",
@@ -747,7 +706,6 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "d8e2ecc1",
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +739,6 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "d265dfbd",
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +785,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deecafe2",
    "metadata": {},
    "source": [
     "* take the time series and sorting the returns, not use the normal distribution\n",
@@ -838,7 +794,6 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "81025b98",
    "metadata": {
     "scrolled": false
    },
@@ -872,7 +827,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dda59214",
    "metadata": {},
    "source": [
     "# Simulation\n",
@@ -889,7 +843,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8452a041",
    "metadata": {},
    "source": [
     "### CVaR\n",
@@ -903,7 +856,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa81ad9e",
    "metadata": {},
    "source": [
     "## Advantages of Historical Simulation\n",
@@ -916,7 +868,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a8b484c",
    "metadata": {},
    "source": [
     "## Disadvantages of Historical Simulation\n",
@@ -935,7 +886,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1c63600",
    "metadata": {},
    "source": [
     "## Monte Carlo Simulation\n",
@@ -947,7 +897,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d56cf995",
    "metadata": {},
    "source": [
     "MC has many applications:\n",
@@ -957,7 +906,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8e0edf0",
    "metadata": {},
    "source": [
     "## Simulating Bonds and Options"
@@ -965,7 +913,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5453d75",
    "metadata": {},
    "source": [
     "Monte Carlo simulation is usefully applied to cases where the portfolio value is nonlinear in the simulated factors.\n",
@@ -975,7 +922,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b320ab2",
    "metadata": {},
    "source": [
     "# Other Approaches\n",
@@ -1002,7 +948,7 @@
  "metadata": {
   "hide_input": true,
   "kernelspec": {
-   "display_name": "Python 3.8.9 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1016,7 +962,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.7.4"
   },
   "vscode": {
    "interpreter": {
