--- a/homework/hw2.ipynb
+++ b/homework/hw2.ipynb
@@ -25,6 +25,92 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8576f9e8",
+   "metadata": {
+    "trusted": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>beta</th>\n",
+       "      <th>Treynor Ratio</th>\n",
+       "      <th>Information Ratio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>HFRIFWI Index</th>\n",
+       "      <td>0.3943</td>\n",
+       "      <td>0.1288</td>\n",
+       "      <td>-0.2420</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MLEIFCTR Index</th>\n",
+       "      <td>0.3594</td>\n",
+       "      <td>0.1080</td>\n",
+       "      <td>-0.6153</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MLEIFCTX Index</th>\n",
+       "      <td>0.3580</td>\n",
+       "      <td>0.1043</td>\n",
+       "      <td>-0.6713</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HDG US Equity</th>\n",
+       "      <td>0.3692</td>\n",
+       "      <td>0.0761</td>\n",
+       "      <td>-1.0106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>QAI US Equity</th>\n",
+       "      <td>0.2850</td>\n",
+       "      <td>0.0894</td>\n",
+       "      <td>-0.6873</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  beta  Treynor Ratio  Information Ratio\n",
+       "HFRIFWI Index   0.3943         0.1288            -0.2420\n",
+       "MLEIFCTR Index  0.3594         0.1080            -0.6153\n",
+       "MLEIFCTX Index  0.3580         0.1043            -0.6713\n",
+       "HDG US Equity   0.3692         0.0761            -1.0106\n",
+       "QAI US Equity   0.2850         0.0894            -0.6873"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "reg_stats(hf_data,12)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -368,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2336,7 +2422,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.4 ('base')",
+   "display_name": "Python 3.8.5 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -2350,12 +2436,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8aba7c7331238ad8bef3d07aa03cf759b24ea56e2341769d4c660500293a6aca"
+    "hash": "6553dfd50d31686df0e364d38a7d281a21dd8241aae825f978e35a44bd16b092"
    }
   }
  },
