new file:   data/midterm_1.xlsx 	modified:   discussions/Topic 3 - Value-at-Risk.ipynb 	modified:   exam/midterm.ipynb 	modified:   homework/hw1.ipynb 	modified:   homework/hw3.ipynb

--- a/homework/hw1.ipynb
+++ b/homework/hw1.ipynb
@@ -656,7 +656,7 @@
    "metadata": {},
    "source": [
     "### 1. Summary Statistics\n",
-    "#### (a) Calculate and display the mean and volatility of each asset’s excess return. (Recall we use volatility to refer to standard deviation.)"
+    "#### (a) Calculate and display the mean and volatility of each asset’s total return. (Recall we use volatility to refer to standard deviation.)"
    ]
   },
   {
