--- a/homework/hw4.ipynb
+++ b/homework/hw4.ipynb
@@ -759,10 +759,13 @@
    "metadata": {},
    "source": [
     "### 2.2 Based on the factor statistics above, answer the following.\n",
+    "\n",
     "#### (a) Does each factor have a premium (positive expected excess return) in each subsample?\n",
     "* No. During the subsample period 1981-2001, the size factor(SMB) had a negative expected excess return of -0.0009. \n",
+    "\n",
     "#### (b) Does the premium to the size factor get smaller after 1980?\n",
     "* Yes. The premium to the size factor went to negative from 1981 to 2001, and it has gone back to positive since 2002, however still smaller than the premium before 1980. \n",
+    "\n",
     "#### (c) Does the premium to the value factor get smaller during the 1990’s?\n",
     "* Yes. Value factor went to negative during 1990's. "
    ]
@@ -3548,7 +3551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -3557,31 +3560,31 @@
        "<table class=\"simpletable\">\n",
        "<caption>OLS Regression Results</caption>\n",
        "<tr>\n",
-       "  <th>Dep. Variable:</th>            <td>y</td>        <th>  R-squared:         </th> <td>   1.000</td> \n",
+       "  <th>Dep. Variable:</th>            <td>y</td>        <th>  R-squared (uncentered):</th>      <td>   1.000</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   1.000</td> \n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared (uncentered):</th> <td>   1.000</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>1.658e+29</td>\n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th>          <td>2.764e+30</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Sat, 22 Oct 2022</td> <th>  Prob (F-statistic):</th> <td>7.11e-322</td>\n",
+       "  <th>Date:</th>             <td>Sun, 23 Oct 2022</td> <th>  Prob (F-statistic):</th>           <td>  0.00</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>11:07:52</td>     <th>  Log-Likelihood:    </th> <td>  921.59</td> \n",
+       "  <th>Time:</th>                 <td>13:21:46</td>     <th>  Log-Likelihood:    </th>          <td>  921.36</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>No. Observations:</th>      <td>    25</td>      <th>  AIC:               </th> <td>  -1839.</td> \n",
+       "  <th>No. Observations:</th>      <td>    25</td>      <th>  AIC:               </th>          <td>  -1841.</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Df Residuals:</th>          <td>    23</td>      <th>  BIC:               </th> <td>  -1837.</td> \n",
+       "  <th>Df Residuals:</th>          <td>    24</td>      <th>  BIC:               </th>          <td>  -1840.</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Df Model:</th>              <td>     1</td>      <th>                     </th>     <td> </td>    \n",
+       "  <th>Df Model:</th>              <td>     1</td>      <th>                     </th>              <td> </td>    \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>     <td> </td>    \n",
+       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>              <td> </td>    \n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
@@ -3589,51 +3592,47 @@
        "         <td></td>            <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>const</th>           <td>-1.366e-17</td> <td> 1.99e-17</td> <td>   -0.686</td> <td> 0.499</td> <td>-5.48e-17</td> <td> 2.75e-17</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>tangency return</th> <td>    0.0337</td> <td> 8.28e-17</td> <td> 4.07e+14</td> <td> 0.000</td> <td>    0.034</td> <td>    0.034</td>\n",
+       "  <th>tangency return</th> <td>    0.0337</td> <td> 2.03e-17</td> <td> 1.66e+15</td> <td> 0.000</td> <td>    0.034</td> <td>    0.034</td>\n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
        "<tr>\n",
-       "  <th>Omnibus:</th>       <td> 0.021</td> <th>  Durbin-Watson:     </th> <td>   2.205</td>\n",
+       "  <th>Omnibus:</th>       <td> 0.512</td> <th>  Durbin-Watson:     </th> <td>   2.066</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Prob(Omnibus):</th> <td> 0.989</td> <th>  Jarque-Bera (JB):  </th> <td>   0.203</td>\n",
+       "  <th>Prob(Omnibus):</th> <td> 0.774</td> <th>  Jarque-Bera (JB):  </th> <td>   0.627</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Skew:</th>          <td>-0.048</td> <th>  Prob(JB):          </th> <td>   0.903</td>\n",
+       "  <th>Skew:</th>          <td>-0.223</td> <th>  Prob(JB):          </th> <td>   0.731</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Kurtosis:</th>      <td> 2.569</td> <th>  Cond. No.          </th> <td>    17.7</td>\n",
+       "  <th>Kurtosis:</th>      <td> 2.364</td> <th>  Cond. No.          </th> <td>    1.00</td>\n",
        "</tr>\n",
        "</table><br/><br/>Warnings:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified."
       ],
       "text/plain": [
        "<class 'statsmodels.iolib.summary.Summary'>\n",
        "\"\"\"\n",
-       "                            OLS Regression Results                            \n",
-       "==============================================================================\n",
-       "Dep. Variable:                      y   R-squared:                       1.000\n",
-       "Model:                            OLS   Adj. R-squared:                  1.000\n",
-       "Method:                 Least Squares   F-statistic:                 1.658e+29\n",
-       "Date:                Sat, 22 Oct 2022   Prob (F-statistic):          7.11e-322\n",
-       "Time:                        11:07:52   Log-Likelihood:                 921.59\n",
-       "No. Observations:                  25   AIC:                            -1839.\n",
-       "Df Residuals:                      23   BIC:                            -1837.\n",
-       "Df Model:                           1                                         \n",
-       "Covariance Type:            nonrobust                                         \n",
+       "                                 OLS Regression Results                                \n",
+       "=======================================================================================\n",
+       "Dep. Variable:                      y   R-squared (uncentered):                   1.000\n",
+       "Model:                            OLS   Adj. R-squared (uncentered):              1.000\n",
+       "Method:                 Least Squares   F-statistic:                          2.764e+30\n",
+       "Date:                Sun, 23 Oct 2022   Prob (F-statistic):                        0.00\n",
+       "Time:                        13:21:46   Log-Likelihood:                          921.36\n",
+       "No. Observations:                  25   AIC:                                     -1841.\n",
+       "Df Residuals:                      24   BIC:                                     -1840.\n",
+       "Df Model:                           1                                                  \n",
+       "Covariance Type:            nonrobust                                                  \n",
        "===================================================================================\n",
        "                      coef    std err          t      P>|t|      [0.025      0.975]\n",
        "-----------------------------------------------------------------------------------\n",
-       "const           -1.366e-17   1.99e-17     -0.686      0.499   -5.48e-17    2.75e-17\n",
-       "tangency return     0.0337   8.28e-17   4.07e+14      0.000       0.034       0.034\n",
+       "tangency return     0.0337   2.03e-17   1.66e+15      0.000       0.034       0.034\n",
        "==============================================================================\n",
-       "Omnibus:                        0.021   Durbin-Watson:                   2.205\n",
-       "Prob(Omnibus):                  0.989   Jarque-Bera (JB):                0.203\n",
-       "Skew:                          -0.048   Prob(JB):                        0.903\n",
-       "Kurtosis:                       2.569   Cond. No.                         17.7\n",
+       "Omnibus:                        0.512   Durbin-Watson:                   2.066\n",
+       "Prob(Omnibus):                  0.774   Jarque-Bera (JB):                0.627\n",
+       "Skew:                          -0.223   Prob(JB):                        0.731\n",
+       "Kurtosis:                       2.364   Cond. No.                         1.00\n",
        "==============================================================================\n",
        "\n",
        "Warnings:\n",
@@ -3641,7 +3640,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 132,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3650,15 +3649,37 @@
     "X = sm.add_constant(tan_report['tangency return'])\n",
     "y = portfolio_ex.mean(axis=0)\n",
     "\n",
-    "res = sm.OLS(y, X, missing='drop').fit()\n",
+    "res = sm.OLS(y, tan_report['tangency return'], missing='drop').fit()\n",
+    "# res = sm.OLS(y, X, missing='drop').fit()\n",
     "res.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.03372056443742047"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tangency_ret.mean()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The cross-sectional regression coefficient for tangency beta is exactly the same as the expected premium to tangency portfolio.\n"
+    "* The cross-sectional regression coefficient for tangency beta is exactly the same as the expected premium to tangency portfolio.\n",
+    "* As the derivation shows, it flows from the idea that the covariance of the tangency portfolio with any asset is a linear function of the asset’s mean. We saw that in Lecture 1 as a minor point, but if we rewrite it, we find it makes a perfect beta model. But it is NOT practical to use. As we saw in Week 1, we can never trust that the sample tangency portfolio will hold up out of sample."
    ]
   },
   {
