--- a/homework/hw4.ipynb
+++ b/homework/hw4.ipynb
@@ -2250,109 +2250,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"simpletable\">\n",
-       "<caption>OLS Regression Results</caption>\n",
-       "<tr>\n",
-       "  <th>Dep. Variable:</th>          <td>mean</td>       <th>  R-squared (uncentered):</th>      <td>   0.893</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared (uncentered):</th> <td>   0.888</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th>          <td>   199.5</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Date:</th>             <td>Fri, 21 Oct 2022</td> <th>  Prob (F-statistic):</th>          <td>4.00e-13</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Time:</th>                 <td>15:25:32</td>     <th>  Log-Likelihood:    </th>          <td>  50.676</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>No. Observations:</th>      <td>    25</td>      <th>  AIC:               </th>          <td>  -99.35</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Df Residuals:</th>          <td>    24</td>      <th>  BIC:               </th>          <td>  -98.13</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Df Model:</th>              <td>     1</td>      <th>                     </th>              <td> </td>   \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>              <td> </td>   \n",
-       "</tr>\n",
-       "</table>\n",
-       "<table class=\"simpletable\">\n",
-       "<tr>\n",
-       "       <td></td>         <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>volatility</th> <td>    0.4680</td> <td>    0.033</td> <td>   14.123</td> <td> 0.000</td> <td>    0.400</td> <td>    0.536</td>\n",
-       "</tr>\n",
-       "</table>\n",
-       "<table class=\"simpletable\">\n",
-       "<tr>\n",
-       "  <th>Omnibus:</th>       <td>29.844</td> <th>  Durbin-Watson:     </th> <td>   1.256</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Prob(Omnibus):</th> <td> 0.000</td> <th>  Jarque-Bera (JB):  </th> <td>  60.203</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Skew:</th>          <td>-2.363</td> <th>  Prob(JB):          </th> <td>8.46e-14</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Kurtosis:</th>      <td> 8.954</td> <th>  Cond. No.          </th> <td>    1.00</td>\n",
-       "</tr>\n",
-       "</table><br/><br/>Warnings:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified."
-      ],
-      "text/plain": [
-       "<class 'statsmodels.iolib.summary.Summary'>\n",
-       "\"\"\"\n",
-       "                                 OLS Regression Results                                \n",
-       "=======================================================================================\n",
-       "Dep. Variable:                   mean   R-squared (uncentered):                   0.893\n",
-       "Model:                            OLS   Adj. R-squared (uncentered):              0.888\n",
-       "Method:                 Least Squares   F-statistic:                              199.5\n",
-       "Date:                Fri, 21 Oct 2022   Prob (F-statistic):                    4.00e-13\n",
-       "Time:                        15:25:32   Log-Likelihood:                          50.676\n",
-       "No. Observations:                  25   AIC:                                     -99.35\n",
-       "Df Residuals:                      24   BIC:                                     -98.13\n",
-       "Df Model:                           1                                                  \n",
-       "Covariance Type:            nonrobust                                                  \n",
-       "==============================================================================\n",
-       "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
-       "------------------------------------------------------------------------------\n",
-       "volatility     0.4680      0.033     14.123      0.000       0.400       0.536\n",
-       "==============================================================================\n",
-       "Omnibus:                       29.844   Durbin-Watson:                   1.256\n",
-       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               60.203\n",
-       "Skew:                          -2.363   Prob(JB):                     8.46e-14\n",
-       "Kurtosis:                       8.954   Cond. No.                         1.00\n",
-       "==============================================================================\n",
-       "\n",
-       "Warnings:\n",
-       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-       "\"\"\""
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X = summary[\"volatility\"]\n",
-    "y = summary[\"mean\"]\n",
-    "static_model = sm.OLS(y, X).fit()\n",
-    "static_model.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 103,
    "metadata": {},
    "outputs": [
@@ -2387,109 +2284,6 @@
     "    s = 200\n",
     ")\n",
     "# size=\"volatility\", sizes=(20, 200)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"simpletable\">\n",
-       "<caption>OLS Regression Results</caption>\n",
-       "<tr>\n",
-       "  <th>Dep. Variable:</th>          <td>mean</td>       <th>  R-squared (uncentered):</th>      <td>   0.886</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared (uncentered):</th> <td>   0.881</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th>          <td>   186.8</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Date:</th>             <td>Fri, 21 Oct 2022</td> <th>  Prob (F-statistic):</th>          <td>8.07e-13</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Time:</th>                 <td>15:25:34</td>     <th>  Log-Likelihood:    </th>          <td>  49.948</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>No. Observations:</th>      <td>    25</td>      <th>  AIC:               </th>          <td>  -97.90</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Df Residuals:</th>          <td>    24</td>      <th>  BIC:               </th>          <td>  -96.68</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Df Model:</th>              <td>     1</td>      <th>                     </th>              <td> </td>   \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>              <td> </td>   \n",
-       "</tr>\n",
-       "</table>\n",
-       "<table class=\"simpletable\">\n",
-       "<tr>\n",
-       "   <td></td>      <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>VaR</th> <td>   -1.0875</td> <td>    0.080</td> <td>  -13.669</td> <td> 0.000</td> <td>   -1.252</td> <td>   -0.923</td>\n",
-       "</tr>\n",
-       "</table>\n",
-       "<table class=\"simpletable\">\n",
-       "<tr>\n",
-       "  <th>Omnibus:</th>       <td>26.064</td> <th>  Durbin-Watson:     </th> <td>   1.289</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Prob(Omnibus):</th> <td> 0.000</td> <th>  Jarque-Bera (JB):  </th> <td>  44.727</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Skew:</th>          <td>-2.125</td> <th>  Prob(JB):          </th> <td>1.94e-10</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "  <th>Kurtosis:</th>      <td> 7.988</td> <th>  Cond. No.          </th> <td>    1.00</td>\n",
-       "</tr>\n",
-       "</table><br/><br/>Warnings:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified."
-      ],
-      "text/plain": [
-       "<class 'statsmodels.iolib.summary.Summary'>\n",
-       "\"\"\"\n",
-       "                                 OLS Regression Results                                \n",
-       "=======================================================================================\n",
-       "Dep. Variable:                   mean   R-squared (uncentered):                   0.886\n",
-       "Model:                            OLS   Adj. R-squared (uncentered):              0.881\n",
-       "Method:                 Least Squares   F-statistic:                              186.8\n",
-       "Date:                Fri, 21 Oct 2022   Prob (F-statistic):                    8.07e-13\n",
-       "Time:                        15:25:34   Log-Likelihood:                          49.948\n",
-       "No. Observations:                  25   AIC:                                     -97.90\n",
-       "Df Residuals:                      24   BIC:                                     -96.68\n",
-       "Df Model:                           1                                                  \n",
-       "Covariance Type:            nonrobust                                                  \n",
-       "==============================================================================\n",
-       "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
-       "------------------------------------------------------------------------------\n",
-       "VaR           -1.0875      0.080    -13.669      0.000      -1.252      -0.923\n",
-       "==============================================================================\n",
-       "Omnibus:                       26.064   Durbin-Watson:                   1.289\n",
-       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               44.727\n",
-       "Skew:                          -2.125   Prob(JB):                     1.94e-10\n",
-       "Kurtosis:                       7.988   Cond. No.                         1.00\n",
-       "==============================================================================\n",
-       "\n",
-       "Warnings:\n",
-       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-       "\"\"\""
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X = summary[\"VaR\"]\n",
-    "y = summary[\"mean\"]\n",
-    "static_model = sm.OLS(y, X).fit()\n",
-    "static_model.summary()"
    ]
   },
   {
@@ -2530,6 +2324,85 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>volatility</th>\n",
+       "      <th>VaR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>-0.3982</td>\n",
+       "      <td>0.4629</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>volatility</th>\n",
+       "      <td>-0.3982</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>-0.9528</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VaR</th>\n",
+       "      <td>0.4629</td>\n",
+       "      <td>-0.9528</td>\n",
+       "      <td>1.0000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              mean  volatility     VaR\n",
+       "mean        1.0000     -0.3982  0.4629\n",
+       "volatility -0.3982      1.0000 -0.9528\n",
+       "VaR         0.4629     -0.9528  1.0000"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summary[[\"mean\", \"volatility\", \"VaR\"]].corr()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Answers:**\n",
+    "* The mean vs vol graph makes it very clear that vol is not the determinant of mean. The higher vol portfolios actually have lower means. The mean vs VaR plot is also a very week relationship.\n",
+    "* The mean of the excess returns are slightly better (higher absolute value of Pearson's ) linearly correlated with the VaR (+46%) than with the volatility (-40%), though both are not strong."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2540,7 +2413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -2779,7 +2652,7 @@
        "BIG HiBM    0.0149  1.0150      0.1127         0.0949"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2801,8 +2674,73 @@
     "\n",
     "* Information ratio\n",
     "\n",
-    "$$\\text{Information Ratio} \\equiv \\frac{\\alpha}{\\sigma_\\epsilon}$$\n",
-    "\n",
+    "$$\\text{Information Ratio} \\equiv \\frac{\\alpha}{\\sigma_\\epsilon}$$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.009394844987533884"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "capm_res.alpha.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.09131099844454754"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "capm_res[\"Treynor Ratio\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.11789027557336995"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "capm_res[\"Info Ratio\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Answers**\n",
     "\n",
     "* If CAPM were true, the alphas and the Information Ratios would all be zero. The Treynor Ratios would all equal to the mean excess market return."
