--- a/homework/hw4.ipynb
+++ b/homework/hw4.ipynb
@@ -3659,23 +3659,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "H = 20068.02\n",
+      "H = 16201.23\n",
       "p-value = 0.0000\n"
      ]
     }
    ],
    "source": [
-    "T = portfolio_ex.dropna().shape[0]\n",
-    "# annualize? \n",
-    "SR = factors['Mkt-RF'].mean() / factors['Mkt-RF'].std()\n",
-    "Sigma = resid_matrix.cov()\n",
+    "T = portfolio_ex.dropna().shape[0] \n",
+    "# annualize\n",
+    "SR = factors['Mkt-RF'].mean() / factors['Mkt-RF'].std() * np.sqrt(12)\n",
+    "Sigma = resid_matrix.cov() \n",
     "Sigma_inv = pd.DataFrame(np.linalg.inv(\n",
     "    Sigma), index=Sigma.index, columns=Sigma.columns)\n",
     "alpha = capm_res['alpha']\n",
