--- a/homework/hw6.ipynb
+++ b/homework/hw6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "'2009', '2022' -0.0149  0.1593 -0.0932   -2.8113   -0.3779   -0.3851"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,6 +222,8 @@
    "source": [
     "mom_ff = 1/2*(mom_size[\"BIG HiPRIOR\"]+mom_size[\"SMALL HiPRIOR\"]) - \\\n",
     "    1/2*(mom_size[\"BIG LoPRIOR\"]+mom_size[\"SMALL LoPRIOR\"])\n",
+    "\n",
+    "mom_ff = mom_ff.dropna()\n",
     "\n",
     "year_list = [(\"1927\", \"2022\"), (\"1927\", \"1993\"),(\"1994\", \"2008\"), (\"2009\", \"2022\")]\n",
     "r = factor_ret[[\"MKT\", \"HML\"]]\n",
@@ -406,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,13 +416,13 @@
     "mom_d[\"mom_D1\"] = mom_decile[\"Hi PRIOR\"] - mom_decile[\"Lo PRIOR\"]\n",
     "mom_d[\"mom_D3\"] = 1/3*(mom_decile[\"PRIOR 8\"] + mom_decile[\"PRIOR 9\"] +\n",
     "              mom_decile[\"Hi PRIOR\"]) - 1/3*(mom_decile[\"Lo PRIOR\"] + mom_decile[\"PRIOR 2\"] + mom_decile[\"PRIOR 3\"])\n",
-    "mom_d[\"mom_D5\"] = mom_decile.iloc[:, :5].mean(\n",
-    "    axis=1) - mom_decile.iloc[:, 5:].mean(axis=1)"
+    "mom_d[\"mom_D5\"] = mom_decile.iloc[:, 5:].mean(axis=1) - mom_decile.iloc[:, :5].mean(\n",
+    "    axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -473,12 +475,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mom_D5</th>\n",
-       "      <td>-0.0180</td>\n",
+       "      <td>0.0180</td>\n",
        "      <td>0.1340</td>\n",
-       "      <td>-0.1345</td>\n",
-       "      <td>1.4354</td>\n",
-       "      <td>0.3579</td>\n",
-       "      <td>0.2275</td>\n",
+       "      <td>0.1345</td>\n",
+       "      <td>-1.4354</td>\n",
+       "      <td>-0.3579</td>\n",
+       "      <td>-0.2275</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -488,10 +490,10 @@
        "          mean     vol  Sharpe  skewness  MKT_corr  HML_corr\n",
        "mom_D1  0.0794  0.2980  0.2665   -1.3236   -0.3356   -0.2364\n",
        "mom_D3  0.0342  0.1926  0.1776   -1.3554   -0.3654   -0.2299\n",
-       "mom_D5 -0.0180  0.1340 -0.1345    1.4354    0.3579    0.2275"
+       "mom_D5  0.0180  0.1340  0.1345   -1.4354   -0.3579   -0.2275"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -599,12 +601,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mom_D5</th>\n",
-       "      <td>-0.0180</td>\n",
+       "      <td>0.0180</td>\n",
        "      <td>0.1340</td>\n",
-       "      <td>-0.1345</td>\n",
-       "      <td>1.4354</td>\n",
-       "      <td>0.3579</td>\n",
-       "      <td>0.2275</td>\n",
+       "      <td>0.1345</td>\n",
+       "      <td>-1.4354</td>\n",
+       "      <td>-0.3579</td>\n",
+       "      <td>-0.2275</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -616,10 +618,10 @@
        "long-only       0.1128  0.1789  0.6304   -0.4829    0.9035   -0.1547\n",
        "mom_D1          0.0794  0.2980  0.2665   -1.3236   -0.3356   -0.2364\n",
        "mom_D3          0.0342  0.1926  0.1776   -1.3554   -0.3654   -0.2299\n",
-       "mom_D5         -0.0180  0.1340 -0.1345    1.4354    0.3579    0.2275"
+       "mom_D5          0.0180  0.1340  0.1345   -1.4354   -0.3579   -0.2275"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +668,7 @@
        "Length: 1149, dtype: float64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,136 +679,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>mom_ff</th>\n",
-       "      <th>mom_s</th>\n",
-       "      <th>mom_b</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1927-01-31</th>\n",
-       "      <td>0.0036</td>\n",
-       "      <td>0.0032</td>\n",
-       "      <td>0.0040</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1927-02-28</th>\n",
-       "      <td>-0.0215</td>\n",
-       "      <td>-0.0150</td>\n",
-       "      <td>-0.0280</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1927-03-31</th>\n",
-       "      <td>0.0362</td>\n",
-       "      <td>0.0140</td>\n",
-       "      <td>0.0583</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1927-04-30</th>\n",
-       "      <td>0.0430</td>\n",
-       "      <td>0.0407</td>\n",
-       "      <td>0.0453</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1927-05-31</th>\n",
-       "      <td>0.0301</td>\n",
-       "      <td>0.0435</td>\n",
-       "      <td>0.0166</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-05-31</th>\n",
-       "      <td>0.0248</td>\n",
-       "      <td>0.0446</td>\n",
-       "      <td>0.0050</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-06-30</th>\n",
-       "      <td>0.0080</td>\n",
-       "      <td>-0.0263</td>\n",
-       "      <td>0.0423</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-07-31</th>\n",
-       "      <td>-0.0397</td>\n",
-       "      <td>-0.0215</td>\n",
-       "      <td>-0.0578</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-08-31</th>\n",
-       "      <td>0.0210</td>\n",
-       "      <td>0.0169</td>\n",
-       "      <td>0.0251</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-09-30</th>\n",
-       "      <td>0.0353</td>\n",
-       "      <td>0.0246</td>\n",
-       "      <td>0.0460</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1149 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            mom_ff   mom_s   mom_b\n",
-       "Date                              \n",
-       "1927-01-31  0.0036  0.0032  0.0040\n",
-       "1927-02-28 -0.0215 -0.0150 -0.0280\n",
-       "1927-03-31  0.0362  0.0140  0.0583\n",
-       "1927-04-30  0.0430  0.0407  0.0453\n",
-       "1927-05-31  0.0301  0.0435  0.0166\n",
-       "...            ...     ...     ...\n",
-       "2022-05-31  0.0248  0.0446  0.0050\n",
-       "2022-06-30  0.0080 -0.0263  0.0423\n",
-       "2022-07-31 -0.0397 -0.0215 -0.0578\n",
-       "2022-08-31  0.0210  0.0169  0.0251\n",
-       "2022-09-30  0.0353  0.0246  0.0460\n",
-       "\n",
-       "[1149 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mom_bs = pd.DataFrame()\n",
     "mom_bs[\"mom_ff\"] = mom_ff\n",
@@ -816,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +762,7 @@
        "mom_b   0.0319  0.1819  0.1755   -0.8576   -0.2780   -0.2869"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,6 +790,11 @@
     "\n",
     "* The AQR retail product is substantially different from what we typically refer to as momentum. Though it has strong expected returns, it is almost all from market premium. This is a feature of being long-only and won't be fixed by modifying the exact constructions decile, sorting by size, etc."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
