modified:   exam/functions.ipynb 	new file:   homework/2021_midterm2.ipynb

--- a/exam/functions.ipynb
+++ b/exam/functions.ipynb
@@ -119,6 +119,8 @@
     "static_model = sm.OLS(y, X).fit()\n",
     "sm.OLS(lhs, rhs, missing='drop').fit()\n",
     "static_model.summary()\n",
+    "# confidence interval\n",
+    "\n",
     "\n",
     "# rolling\n",
     "model = RollingOLS(y, X, window=60)\n",
@@ -261,16 +263,149 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## HW3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def summary_stat(df, annual_factor, q=0.05):\n",
+    "    '''summary assets' mean return, voaltility(stdev) and sharpe ratio'''\n",
+    "    result = pd.DataFrame()\n",
+    "    result[\"mean\"] = df.mean() * annual_factor\n",
+    "    result[\"volatility\"] = df.std() * np.sqrt(annual_factor)\n",
+    "    result[\"Sharpe Ratio\"] = result[\"mean\"]/result[\"volatility\"]\n",
+    "\n",
+    "    result[\"VaR\"] = df.quantile(q)\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "def get_capm_matrics(targets, regressors, add_constant=True, annualize_factor=12):\n",
+    "\n",
+    "    result = pd.DataFrame(index=targets.columns)\n",
+    "    resid_matrix = pd.DataFrame(columns=targets.columns)\n",
+    "    t_p_value = pd.DataFrame(index=targets.columns)\n",
+    "\n",
+    "    if add_constant:\n",
+    "        X = sm.add_constant(regressors)\n",
+    "    else:\n",
+    "        X = regressors.copy()\n",
+    "    for column in targets.columns:\n",
+    "        y = targets[[column]]\n",
+    "        model = sm.OLS(y, X, missing='drop').fit()\n",
+    "        if add_constant:\n",
+    "            result.loc[column, \"alpha\"] = model.params['const'] * \\\n",
+    "                annualize_factor\n",
+    "        result.loc[column, regressors.columns] = model.params[regressors.columns]\n",
+    "        if add_constant:\n",
+    "            result.loc[column, 'Info Ratio'] = np.sqrt(\n",
+    "                annualize_factor) * model.params['const'] / model.resid.std()\n",
+    "\n",
+    "        if regressors.shape[1] == 1:\n",
+    "            result.loc[column, \"Treynor Ratio\"] = (\n",
+    "                y.mean().values[0]/model.params[regressors.columns].values[0]) * annualize_factor\n",
+    "\n",
+    "        resid_matrix[column] = model.resid\n",
+    "        t_p_value.loc[column, \"t-value\"] = model.tvalues['const']\n",
+    "        t_p_value.loc[column, \"p-value\"] = model.pvalues['const']\n",
+    "\n",
+    "    return result, resid_matrix, t_p_value\n",
+    "\n",
+    "\n",
+    "def cal_excess_tangency(df_ex, annual_factor):\n",
+    "    N = df_ex.shape[1]\n",
+    "\n",
+    "    Sigma = df_ex.cov() * annual_factor\n",
+    "    Sigma_inv = np.linalg.inv(Sigma)\n",
+    "    mean_ex = df_ex.mean() * annual_factor\n",
+    "\n",
+    "    w_t = 1/(np.ones(N) @ Sigma_inv @ mean_ex) * Sigma_inv @ mean_ex\n",
+    "    return pd.Series(w_t, index=df_ex.columns)\n",
+    "\n",
+    "\n",
+    "T = portfolio_ex.dropna().shape[0]\n",
+    "# annualize\n",
+    "SR = factors['Mkt-RF'].mean() / factors['Mkt-RF'].std() * np.sqrt(12)\n",
+    "Sigma = resid_matrix.cov()\n",
+    "Sigma_inv = pd.DataFrame(np.linalg.inv(\n",
+    "    Sigma), index=Sigma.index, columns=Sigma.columns)\n",
+    "alpha = capm_res['alpha']\n",
+    "H = T * (1 + SR**2)**(-1) * alpha @ Sigma_inv @ alpha\n",
+    "print('H = {:.2f}'.format(H))\n",
+    "pvalue = 1 - stats.chi2.cdf(H, df=25)\n",
+    "print('p-value = {:.4f}'.format(pvalue))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## HW5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_capm_matrics(targets, regressors, add_constant=True, annualize_factor=12):\n",
+    "\n",
+    "    result = pd.DataFrame(index=targets.columns)\n",
+    "    resid_matrix = pd.DataFrame(columns=targets.columns)\n",
+    "    t_p_value = pd.DataFrame(index=targets.columns)\n",
+    "\n",
+    "    if add_constant:\n",
+    "        X = sm.add_constant(regressors)\n",
+    "    else:\n",
+    "        X = regressors.copy()\n",
+    "    for column in targets.columns:\n",
+    "        y = targets[[column]]\n",
+    "        model = sm.OLS(y, X, missing='drop').fit()\n",
+    "        if add_constant:\n",
+    "            result.loc[column, \"alpha\"] = model.params['const'] * \\\n",
+    "                annualize_factor\n",
+    "        result.loc[column, regressors.columns] = model.params[regressors.columns]\n",
+    "\n",
+    "        result.loc[column, \"R-squared\"] = model.rsquared\n",
+    "\n",
+    "        resid_matrix[column] = model.resid\n",
+    "        if add_constant:\n",
+    "            t_p_value.loc[column, \"t-value\"] = model.tvalues['const']\n",
+    "            t_p_value.loc[column, \"p-value\"] = model.pvalues['const']\n",
+    "\n",
+    "    return result, resid_matrix, t_p_value"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 ('.venv': venv)",
+   "display_name": "Python 3.7.4 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -284,12 +419,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6553dfd50d31686df0e364d38a7d281a21dd8241aae825f978e35a44bd16b092"
+    "hash": "8aba7c7331238ad8bef3d07aa03cf759b24ea56e2341769d4c660500293a6aca"
    }
   }
  },
